more vision spacing fixes

--- a/app/assets/stylesheets/homepage/_ourvision.scss
+++ b/app/assets/stylesheets/homepage/_ourvision.scss
@@ -130,6 +130,7 @@
     text-align: left;
     color: #ffffff;
     @media(min-width: $medium) {
+      margin-top:60px;
       img {
         padding-right: 24.6px;
       }
